Get rid of some deprecation and this escape warnings